objects/Case.object
<CustomObject>
    <fields>
        <fullName>SLI_KYCCategory__c</fullName>
        <description>Used by STANLIB portal users when selecting their KYC Category for a STANLIB institutional onboarding initiation</description>
        <label>KYC Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSA Citizen</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Emigrant</fullName>
                </value>
                <value>
                    <fullName>Foreign Citizen</fullName>
                </value>
                <value>
                    <fullName>RSA Close Corporation</fullName>
                </value>
                <value>
                    <fullName>RSA Company</fullName>
                </value>
                <value>
                    <fullName>Foreign Company</fullName>
                </value>
                <value>
                    <fullName>Other Legal Person</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Retirement Fund</fullName>
                </value>
                <value>
                    <fullName>Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Public Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_MandateType__c</fullName>
        <description>Used to determine which mandate type a STANLIB institutional portal user has selected when initiating an onboarding process</description>
        <label>Legal Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Segregated</fullName>
                </value>
                <value>
                    <fullName>Unit Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link the STANLIB Institutional onboarding opportunity to the case</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLR_PriorityAccount__c</fullName>
        <description>STALIB Retail Priority Account Flag</description>
        <formula>Account.SLR_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSC_AgeofCaseinHours__c</fullName>
        <description>Restarts the SLA if a case has been re-opened</description>
        <formula>IF(
   ISPICKVAL(Status, &apos;New&apos;),
   0,
   9 * (
     ( 5 * FLOOR( ( DATEVALUE(SD_SlaEndDate__c ) - SD_FirstDateThatIsAMonday__c ) / 7) +
     MIN(5,
     MOD( DATEVALUE( SD_SlaEndDate__c ) - SD_FirstDateThatIsAMonday__c, 7) +
     MIN( 1, 24 / 8 * ( MOD(SD_SlaEndDate__c - SD_StartDateTimeForFirstMonday__c, 1 ) ) )
     )
     )
     -
     ( 5 * FLOOR( ( DATEVALUE( SD_SlaStartDate__c ) - SD_FirstDateThatIsAMonday__c) / 7) +
     MIN( 5,
     MOD( DATEVALUE( SD_SlaStartDate__c ) - SD_FirstDateThatIsAMonday__c, 7 ) +
     MIN( 1, 24 / 8 * ( MOD( SD_SlaStartDate__c - SD_StartDateTimeForFirstMonday__c, 1) ) )
     )
     )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Case in Hours Reopened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_Segment__c</fullName>
        <description>Broker Segmentation was created to see how many non-Priority we are dealing within Priority and the same for Non-Priority</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Client</fullName>
                </value>
                <value>
                    <fullName>Non Priority</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <description>Assigned from queue</description>
        <label>Assigned From Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Seq__c</fullName>
        <description>Assignment sequence number</description>
        <label>Assignment Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_Assign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude from user assignment count</description>
        <label>Q Assign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Custom_Seq__c</fullName>
        <description>Q-assign custom assign sequence</description>
        <label>Q-assign Custom Seq</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <description>Q-assign last assigned date</description>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Reviewed_Days__c</fullName>
        <description>Number of days between Q-assign last assignment date and last modified date</description>
        <formula>LastModifiedDate - ortoo_qra__Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RSC_ServiceType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Case_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Case Queue</label>
        <queue>ECM_Claims</queue>
        <sharedTo>
            <role>AW_LibertySupport</role>
            <role>ECM_Service_Agent</role>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DelmaineLH</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterThan</operation>
            <value>8/31/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.STANLIB_Case</value>
        </filters>
        <label>DelmaineLH</label>
        <sharedTo>
            <group>AW_LibertyAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ECM_Claims_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>ECM Claims Queue</label>
        <language>en_US</language>
        <queue>ECM_Claims</queue>
        <sharedTo>
            <role>AW_LibertySupport</role>
            <role>ECM_Service_Agent</role>
            <role>Liberty_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FNZ_Asset_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SLC_SupportType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>FNZ Asset</label>
        <queue>FNZ_Asset</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>SLI_InstitutionalDistribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FNZ_CashManagement_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SLC_SupportType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>FNZ Cash Management</label>
        <queue>FNZ_CashManagement</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>SLI_InstitutionalDistribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FNZ_Institutional_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SLC_SupportType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>FNZ Institutional</label>
        <queue>FNZ_Institutional</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>SLI_InstitutionalDistribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FNZ_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SLC_SupportType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>FNZ Support</label>
        <queue>FNZ_Support</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>SLI_InstitutionalDistribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RSC_ServiceType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress,Closed,Resolved</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RSC_ServiceType__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>RSC_MyOnHoldCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RSC_ServiceType__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>SC_SubStatus__c</columns>
        <columns>SC_Reason__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SC_SubStatus__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My On Hold Cases</label>
        <sharedTo>
            <group>RSC_ClientandAdviserServiceCentreAgents</group>
            <group>RSC_ClientandAdviserServiceCentreLeaders</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SC_CasesAvailableForAssignment</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>Cases Available For Assignment</label>
        <queue>SC_CasesAvailableForAssignment</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>RSC_ZA_Retail_ClientandAdviserServiceCentre</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_AllSupervisorCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SD_Country__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>SD_AgeOfCaseInHours__c</columns>
        <columns>SD_SLAIndicator__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_CaseOwnerProfile__c</field>
            <operation>contains</operation>
            <value>Supervisor</value>
        </filters>
        <label>All Supervisor Cases</label>
        <sharedTo>
            <role>SD_LibertyHealthManager</role>
            <role>SD_MalawiLibertyHealthSupervisor</role>
            <role>SD_MozambiqueLibertyHealthSupervisor</role>
            <role>SD_SouthAfricaLibertyHealthSupervisor</role>
            <role>SD_UgandaLibertyHealthSupervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_All_Malawi_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SD_Country__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>SD_AgeOfCaseInHours__c</columns>
        <columns>SD_SLAIndicator__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>Malawi</value>
        </filters>
        <label>All Malawi Cases</label>
        <sharedTo>
            <role>SD_LibertyHealthManager</role>
            <role>SD_MalawiLibertyHealthConsultant</role>
            <role>SD_MalawiLibertyHealthSupervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_All_Mozambican_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SD_Country__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>SD_AgeOfCaseInHours__c</columns>
        <columns>SD_SLAIndicator__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>All Mozambique Cases</label>
        <sharedTo>
            <role>SD_LibertyHealthManager</role>
            <role>SD_MozambiqueLibertyHealthConsultant</role>
            <role>SD_MozambiqueLibertyHealthSupervisor</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_Retail</fullName>
        <active>true</active>
        <businessProcess>RSC_ServiceConsole</businessProcess>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>SD_HealthFeedback</fullName>
        <active>true</active>
        <businessProcess>SD_HealthSupport</businessProcess>
        <label>Health Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>SD_HealthSupport</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Health Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLC_ProspectCase</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support</businessProcess>
        <description>STANLIB Institutional Prospect Cases</description>
        <label>STANLIB Institutional Prospect Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLI_InstitutionalOnboardingCase</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support</businessProcess>
        <description>Used to qualify institutional onboardings initiated by portal users</description>
        <label>STANLIB Institutional Onboarding Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLR_ProspectCase</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support Process</businessProcess>
        <description>STANLIB Retail Prospect Case</description>
        <label>STANLIB Retail Prospect Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLSC_Case</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support Process</businessProcess>
        <description>Used to track STANLIB client queries and requests.</description>
        <label>STANLIB Manco Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>STANLIB_Case</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support</businessProcess>
        <description>STANLIB Institution Case Management</description>
        <label>STANLIB Institution Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>STANLIB_Retail_Case</fullName>
        <active>true</active>
        <businessProcess>STANLIB Support</businessProcess>
        <description>STANLIB Retail Case Management</description>
        <label>STANLIB Retail Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_Feedback_Not_Updated</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
				RecordType.DeveloperName = &apos;Default&apos;,
    ISPICKVAL( Status, &apos;Closed&apos; ),
    ISBLANK(AW_Feedback__c  )				
)</errorConditionFormula>
        <errorDisplayField>AW_Feedback__c</errorDisplayField>
        <errorMessage>Please provide feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_RequesterDetailsNotUpdated</fullName>
        <active>true</active>
        <description>Prevents agent from saving the case record without updating the relevant requester details when the requester type is not &quot;Customer&quot;</description>
        <errorConditionFormula>AND(
				RecordType.DeveloperName = &apos;RSC_Retail&apos;,
	 		NOT(ISBLANK( TEXT(SC_RequesterType__c))),
				NOT(ISPICKVAL( SC_RequesterType__c, &apos;Customer&apos;)),
				OR(
					ISBLANK(SC_RequesterMobile__c),
					ISBLANK(SC_RequesterPhone__c),
				 ISBLANK(SC_RequesterName__c),
					ISBLANK(SC_RequesterEmail__c)
				)
	)</errorConditionFormula>
        <errorMessage>Please enter values for the below fields when the Requester Type is not Customer :

Requester Name,
 Requester Email,
 Requester Mobile,
 Requester Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_RequesterEmailCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
RecordType.DeveloperName = &apos;RSC_Retail&apos;,
NOT(ISBLANK(SC_RequesterEmail__c)),
NOT(REGEX(SC_RequesterEmail__c,&quot;^[a-zA-Z0-9!.#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!.#$%&amp;&apos;*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\.)+([a-zA-Z]{2,8}|[0-9]{1,3})$&quot;))
)</errorConditionFormula>
        <errorDisplayField>SC_RequesterEmail__c</errorDisplayField>
        <errorMessage>Please enter valid Requester Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_RequesterMobileCheck</fullName>
        <active>true</active>
        <description>Validation to check the format of Requester Mobile field value</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;RSC_Retail&apos;,
NOT(ISBLANK(SC_RequesterMobile__c)),
NOT(REGEX( SC_RequesterMobile__c,&apos;^((\\+)?[1-9]{1,4})?([-\\s\\.\\/])?((\\(\\d{1,4}\\))|\\d{1,4})(([-\\s\\.\\/])?[0-9]{1,6}){2,6}(\\s?(ext|x)\\s?[0-9]{1,6})?$&apos;))
)</errorConditionFormula>
        <errorDisplayField>SC_RequesterMobile__c</errorDisplayField>
        <errorMessage>Please enter a valid Requester Mobile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_RequesterPhoneCheck</fullName>
        <active>true</active>
        <description>Validation to check the format of Requester Phone field value</description>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;RSC_Retail&apos;,
	NOT(ISBLANK(SC_RequesterPhone__c)),
	NOT(REGEX( SC_RequesterPhone__c,&apos;^((\\+)?[1-9]{1,4})?([-\\s\\.\\/])?((\\(\\d{1,4}\\))|\\d{1,4})(([-\\s\\.\\/])?[0-9]{1,6}){2,6}(\\s?(ext|x)\\s?[0-9]{1,6})?$&apos;))
	)</errorConditionFormula>
        <errorDisplayField>SC_RequesterPhone__c</errorDisplayField>
        <errorMessage>Please enter valid Requester Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_ResolvedClosedStatusCheck</fullName>
        <active>true</active>
        <description>Only the owner of a case can update the status to Resolved or Closed/Resolved.</description>
        <errorConditionFormula>AND
(
    RecordType.DeveloperName = &apos;RSC_Retail&apos;,
    ISCHANGED(Status),
    $User.Id &lt;&gt; OwnerId,
    NOT($Permission.SC_BypassCaseOwnerValidationPermission),
    RSC_ServiceType__r.SC_Assignable__c == TRUE,
    OR
    (
        ISPICKVAL(Status,&apos;Resolved&apos;),
        ISPICKVAL(Status,&apos;Closed&apos;)
    )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Only the Case Owner has access to change Status to Resolved or Closed/Resolved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_ResumeDateCheck</fullName>
        <active>true</active>
        <description>The Resume Date value should not be less that current date &amp; time and not greater than 2 months from today</description>
        <errorConditionFormula>AND
(
RecordType.DeveloperName = &apos;RSC_Retail&apos;,
NOT(ISNULL(RSC_ResumeDate__c)),
ISPICKVAL(SC_SubStatus__c, &apos;On Hold&apos;),
OR(
		RSC_ResumeDate__c  &lt;  NOW() ,
		DATEVALUE(RSC_ResumeDate__c) &gt; ADDMONTHS(TODAY(),2)
	)
)</errorConditionFormula>
        <errorDisplayField>RSC_ResumeDate__c</errorDisplayField>
        <errorMessage>Resume Date cannot be less than today or more than 2 months from today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_ResumeDateMandatory</fullName>
        <active>true</active>
        <description>The agent should enter Resume Date value when Sub-Status = On Hold, On Hold Status = Other Options and Reason != Referred to Department</description>
        <errorConditionFormula>AND
(
	RecordType.DeveloperName = &apos;RSC_Retail&apos;,
	ISNULL(RSC_ResumeDate__c),
	ISPICKVAL(SC_SubStatus__c, &apos;On Hold&apos;),ISPICKVAL(SC_OnHoldStatus__c, &apos;Other Options&apos;),
	NOT(ISPICKVAL(SC_Reason__c, &apos;Refer To Department Name&apos;))
)</errorConditionFormula>
        <errorDisplayField>RSC_ResumeDate__c</errorDisplayField>
        <errorMessage>Please enter Resume Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SD_PreventCaseEdit</fullName>
        <active>true</active>
        <description>Prevent users from editing a closed case if they are a Liberty Health Consultant</description>
        <errorConditionFormula>AND
(
	$Profile.Name = &quot;SD Liberty Health Consultant&quot;,
	PRIORVALUE(IsClosed)
)</errorConditionFormula>
        <errorMessage>Closed cases cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLC_InternalUsersCaseDescription</fullName>
        <active>true</active>
        <description>An internal STANLIB user is not able to edit the Description field of a Case logged by an external user</description>
        <errorConditionFormula>AND(
ISCHANGED(Description), 
ISPICKVAL($User.UserType,&quot;Standard&quot;),
NOT(ISPICKVAL(CreatedBy.UserType,&quot;Standard&quot;)),
OR(RecordType.DeveloperName=&quot;STANLIB_Case&quot;,RecordType.DeveloperName=&quot;SLC_ProspectCase&quot;,RecordType.DeveloperName=&quot;STANLIB_Retail_Case&quot;,RecordType.DeveloperName=&quot;SLR_ProspectCase&quot;)
)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>You cannot edit the Description of a Case logged by an external user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLSC_UserCanNotReassignCase</fullName>
        <active>true</active>
        <description>User cannot re-assign another users case to themselves or a queue</description>
        <errorConditionFormula>AND(ISCHANGED(OwnerId),
OR(AND(LEFT(PRIORVALUE(OwnerId),3)&lt;&gt;&quot;00G&quot;,
$User.Id=OwnerId),AND(LEFT(OwnerId,3)=&quot;00G&quot;,
PRIORVALUE(OwnerId)&lt;&gt;$User.Id)),
OR($UserRole.Name=&quot;Service Consultant: Priority Broker Line&quot;,
$UserRole.Name=&quot;Service Recovery /Complaints Consultant: Service Recovery/Complaints&quot;,
$UserRole.Name=&quot;Service Consultant Offshore&quot;,
$UserRole.Name=&quot;Service Consultant - Broker Line&quot;,
$UserRole.Name=&quot;Service Consultant:  Investor Line Overflow&quot;,
$UserRole.Name=&quot;Service consultant: Investor Line&quot;),
OR(ISPICKVAL( Origin , &quot;Live Agent&quot;),
ISPICKVAL( Origin , &quot;STANLIB_Inbound call&quot;),
ISPICKVAL( Origin , &quot;STANLIB_Outbound call&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_ClientSupport&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_UnitTrustPriority&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_Complaints&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_UnitTrustBrokerSupport&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_RetailCorporateCashTeam&quot;),
ISPICKVAL( Origin , &quot;STANLIB_email_OffshoreQueries&quot;)),
OR(RecordType.DeveloperName = &apos;SLSC_Case&apos;)
)</errorConditionFormula>
        <errorMessage>Only case owner can reassign the case</errorMessage>
    </validationRules>
</CustomObject>